add david to quotes

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                     <h2>What subscribers are saying</h2> 
                 </div>
                 <div class="col-xs-12 industry">
-                    <p class="label">"Super convenient way to stay up to date on the top news in virtual reality. Look forward to getting VR/AR Weekly every week!"<br/>- John</p>
+                    <p class="label">"Super convenient way to stay up to date on the top news in virtual reality. Look forward to getting VR/AR Weekly every week!"<br/>- John, Entrepreneur</p>
                 </div>
                 <div class="col-xs-12 industry">
-                    <p class="label">"The volume of virtual reality news is pretty overwhelming at this point. A weekly newsletter helps me minimize how much I freak out about missing stuff."<br/>- Ashwin</p>
+                    <p class="label">"The volume of virtual reality news is pretty overwhelming at this point. A weekly newsletter helps me minimize how much I freak out about missing stuff."<br/>- Ashwin, Google</p>
                 </div>
                 <div class="col-xs-12 industry">
-                    <p class="label">"Sick."<br/>- BT</p>
+                    <p class="label">"Swag."<br/>- David, VC</p>
                 </div>
             </div>
             <div class="row">
