--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <div class="col-xs-12 industry">
                     <p>
                         <a href="1.html">1</a>, 
-                        <a href="2.html">2</a>, 
+                        <a href="2.html">2</a>,
+                        <a href="3.html">3</a> 
                     </p>
                 </div>
             </div>
