--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>VR/AR Weekly: Virtual Reality Weekly Newsletter</title>
-    <meta name="description" content="VR/AR Weekly is the best way to stay up to date on virtual reality and augmented reality. Top posts from every major VR subreddit in a weekly newsletter."
+    <meta name="description" content="VR/AR Weekly is the best way to stay up to date on virtual reality and augmented reality. Top posts from every major VR subreddit in a weekly newsletter.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/flexboxgrid/6.2.0/flexboxgrid.min.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
