--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                         <a href="2.html">2</a>,
                         <a href="3.html">3</a>,
                         <a href="4.html">4</a>,
-                        <a href="5.html">5</a>
+                        <a href="5.html">5</a>,
+                        <a href="6.html">6</a>
                     </p>
                 </div>
             </div>
