--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 </div>
                 <div class="col-xs-12 industry">
                     <p>
+                        <a href="8.html">8</a>,
                         <a href="7.html">7</a>,
                         <a href="6.html">6</a>,
                         <a href="5.html">5</a>,
