--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 </div>
                 <div class="col-xs-12 industry">
                     <p>
+                        <a href="10.html">10</a>,
+                        <a href="9.html">9</a>,
                         <a href="8.html">8</a>,
                         <a href="7.html">7</a>,
                         <a href="6.html">6</a>,
