--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 </div>
                 <div class="col-xs-12 industry">
                     <p>
+                        <a href="11.html">11</a>,
                         <a href="10.html">10</a>,
                         <a href="9.html">9</a>,
                         <a href="8.html">8</a>,
