--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 </div>
                 <div class="col-xs-12 industry">
                     <p>
+                        <a href="13.html">13</a>,
                         <a href="12.html">12</a>,
                         <a href="11.html">11</a>,
                         <a href="10.html">10</a>,
